[gd_scene load_steps=3 format=2]

[ext_resource path="res://Code/ButtonCode.gd" type="Script" id=1]
[ext_resource path="res://Themes/Buttons.tres" type="Theme" id=2]

[node name="Pad" type="VBoxContainer"]
margin_right = 60.0
margin_bottom = 60.0
script = ExtResource( 1 )

[node name="Operators" type="HBoxContainer" parent="."]
margin_right = 188.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )

[node name="C" type="Button" parent="Operators"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "C"

[node name="AC" type="Button" parent="Operators"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "AC"

[node name="<-" type="Button" parent="Operators"]
margin_left = 128.0
margin_right = 188.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "<-"

[node name="Numbers" type="HBoxContainer" parent="."]
margin_top = 64.0
margin_right = 188.0
margin_bottom = 124.0
rect_min_size = Vector2( 60, 60 )

[node name="7" type="Button" parent="Numbers"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "7"

[node name="8" type="Button" parent="Numbers"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "8"

[node name="9" type="Button" parent="Numbers"]
margin_left = 128.0
margin_right = 188.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "9"

[node name="Numbers2" type="HBoxContainer" parent="."]
margin_top = 128.0
margin_right = 188.0
margin_bottom = 188.0
rect_min_size = Vector2( 60, 60 )

[node name="4" type="Button" parent="Numbers2"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "4"

[node name="5" type="Button" parent="Numbers2"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "5"

[node name="6" type="Button" parent="Numbers2"]
margin_left = 128.0
margin_right = 188.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "6"

[node name="Numbers3" type="HBoxContainer" parent="."]
margin_top = 192.0
margin_right = 188.0
margin_bottom = 252.0
rect_min_size = Vector2( 60, 60 )

[node name="1" type="Button" parent="Numbers3"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "1"

[node name="2" type="Button" parent="Numbers3"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "2"

[node name="3" type="Button" parent="Numbers3"]
margin_left = 128.0
margin_right = 188.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "3"

[node name="Numbers4" type="HBoxContainer" parent="."]
margin_top = 256.0
margin_right = 188.0
margin_bottom = 316.0
rect_min_size = Vector2( 60, 60 )

[node name="0" type="Button" parent="Numbers4"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "0"

[node name="," type="Button" parent="Numbers4"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = ","

[node name="+-" type="Button" parent="Numbers4"]
margin_left = 128.0
margin_right = 188.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
theme = ExtResource( 2 )
text = "+-"
[connection signal="pressed" from="Operators/C" to="." method="_on_C_pressed"]
[connection signal="pressed" from="Operators/AC" to="." method="_on_AC_pressed"]
[connection signal="pressed" from="Operators/<-" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Numbers/7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="Numbers/8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="Numbers/9" to="." method="_on_9_pressed"]
[connection signal="pressed" from="Numbers2/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="Numbers2/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="Numbers2/6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="Numbers3/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="Numbers3/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="Numbers3/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="Numbers4/0" to="." method="_on_0_pressed"]
[connection signal="pressed" from="Numbers4/," to="." method="_on_dot_pressed"]
[connection signal="pressed" from="Numbers4/+-" to="." method="_on_negative_pressed"]
